# code-snippets

./: README.md
chrome_password_to_pass/: load_pass.py
dep_check/: README.md  dep_check.py
flac_encode/: README.md  encode.py
function_static_variable/: Makefile
function_static_variable/lib/: Makefile
function_static_variable/lib_2/: Makefile  foo.exp
function_static_variable/lib_3/: Makefile
function_static_variable/prog/: Makefile  main.cpp
function_static_variable/shared/: Makefile.common  foo.cpp  foo.h  mm.h
iphone_backup_photo_norm/: photo_norm.py
math_2023/: math_2023.py
opengl_circle/: README.md
opengl_thick_line/: README.md  opengl_line.py
py_setwall/: pysetwall.py
pyunzip_iconv/: archive_exception.py  libarchive_impl.py  py2unzip-iconv.py  py3unzip-iconv.py
run_rdp/: setup.cfg
run_rdp/src/run_rdp/: cmd.py
run_thumbsup/: run_thumbsup.py
txt2epub/: epub_builder.py  txt2epub.py
uint64_div_mod/: README.md  uint64_div_mod.cpp
