[metadata]
name = run-rdp-stonewell
version = 0.0.1
author = Jingnan Si
author_email = jingnan.si+run-rdp@gmail.com
description = a tool help run freerdp in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stonewell/code-snippets/run_rdp
project_urls =
    Bug Tracker = https://github.com/stonewell/code-snippets/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console-scripts =
    run_rdp = run_rdp.cmd:main

[flake8]
ignore = E111, E501, E402, E114
max-line-length = 160
exclude = .git,__pycache__
max-complexity = 10
